src/main/kotlin/com/example/msproduct/errors/InvalidRequestBody.kt
package com.example.msproduct.errors

class InvalidRequestBody(override val message : String?) : RuntimeException() {
}